added some tmux and wezterm configs

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -12,6 +12,8 @@ packages:
                 - tar
                 - gcc
                 - tmux
+                - ripgrep
+                - fd-find
         windows:
           chocolatey:
             - git
